examples/test/testpolicy9406.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9406
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key25: value31
      key43: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value37
          key6: value15
      podSelector:
        matchLabels:
          key27: value14
